fix: improved spacing between masthead heading and page content (#412)

--- a/masthead.css
+++ b/masthead.css
@@ -80,7 +80,7 @@ nav {
   background-position: center;
   background-size: cover;
   position: relative;
-  padding: 20px 0;
+  padding: 20px 20px;
 }
 
 .text-box1 {
@@ -88,6 +88,7 @@ nav {
   font-family: "Crimson Text", serif;
   width: 90%;
   position: absolute;
+  margin-top: 45px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
